# oxide

./: .gitignore  .gitmodules  README.md
backend/: Cargo.toml  Dockerfile  entrypoint.sh  go.mod  go.sum  main.go
backend/db/: database.go
backend/docs/: docs.go  swagger.json  swagger.yaml
backend/handler/: clone.go  lsp.go  silly.go  user.go
backend/models/: lsp.go  session.go  user.go
backend/responses/: responses.go
backend/src/: main.rs
backend/src/utils/: editor.rs  lang_cacher.rs  lang_loader.rs  mod.rs
fafo-backend/: Cargo.toml
fafo-backend/src/: main.rs
frontend/: app.vue  index.html  nuxt.config.ts  package.json  pnpm-lock.yaml
