[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
dotenv = "0.15.0"
libloading = "0.8.8"
once_cell = "1.21.3"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = [
	"postgres",
	"runtime-tokio",
	"uuid",
	"chrono",
] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-console = "0.1.13"
tower-http = { version = "0.6.6", features = ["cors"] }
tree-sitter = "0.25.6"
uuid = "1.17.0"
