[package]
name = "fafo-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
cargo-watch = "8.5.3"
serde = "1.0.228"
sqlx = "0.8.6"
sqlx-cli = "0.8.6"
tokio = "1.47.1"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = "1.18.1"
